# esp32s3-air-mon

./: .gitignore  CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
components/apc1_sensor/: CMakeLists.txt  apc1.c  apc1.h  apc1_define.h
components/espressif__esp_lcd_touch/: display.h
components/i2c_port/: CMakeLists.txt  (+2 more)
main/: CMakeLists.txt  main.c  waveshare_rgb_lcd_port.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_OpenSans_Regular_14.c  ui_font_OpenSans_Regular_16.c  ui_font_Poppins_ExtraLight_116.c  ui_font_Poppins_Light_18.c  ui_font_Poppins_Light_20.c  ui_font_Poppins_Light_24.c
main/ui/images/: ui_img_images_batteryoutline_png.c  ui_img_images_co2_green_png.c  ui_img_images_co2_orange_png.c  ui_img_images_co2_red_png.c  ui_img_images_co2_white_png.c  ui_img_images_line_png.c  ui_img_images_load_png.c  ui_img_images_mobilesignal4_png.c  ui_img_images_pm_green_png.c  ui_img_images_pm_orange_png.c  ui_img_images_pm_red_png.c  ui_img_images_pm_white_png.c  ui_img_images_rh_green_png.c  ui_img_images_rh_orange_png.c  ui_img_images_rh_red_png.c  ui_img_images_rh_white_png.c  ui_img_images_setting32_32_png.c  ui_img_images_temp_green_png.c  ui_img_images_temp_orange_png.c  ui_img_images_temp_red_png.c  ui_img_images_temp_white_png.c  ui_img_images_tvoc_green_png.c  ui_img_images_tvoc_orange_png.c  ui_img_images_tvoc_red_png.c  ui_img_images_tvoc_white_png.c  ui_img_images_wifi1_png.c  ui_img_images_wifi2_png.c  ui_img_images_wifi3_png.c
main/ui/screens/: ui_ScreenIndicatorAQI.c  ui_ScreenLoadAQI.c
(+6 files in other folders)
