SET(SOURCES screens/ui_ScreenLoadAQI.c
    screens/ui_ScreenIndicatorAQI.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_images_mobilesignal4_png.c
    images/ui_img_images_wifi3_png.c
    images/ui_img_images_batteryoutline_png.c
    images/ui_img_images_line_png.c
    images/ui_img_images_load_png.c
    images/ui_img_images_pm_white_png.c
    images/ui_img_images_co2_white_png.c
    images/ui_img_images_temp_white_png.c
    images/ui_img_images_rh_white_png.c
    images/ui_img_images_tvoc_white_png.c
    images/ui_img_images_setting32_32_png.c
    images/ui_img_images_co2_green_png.c
    images/ui_img_images_co2_orange_png.c
    images/ui_img_images_co2_red_png.c
    images/ui_img_images_pm_green_png.c
    images/ui_img_images_pm_orange_png.c
    images/ui_img_images_pm_red_png.c
    images/ui_img_images_rh_green_png.c
    images/ui_img_images_rh_orange_png.c
    images/ui_img_images_rh_red_png.c
    images/ui_img_images_temp_green_png.c
    images/ui_img_images_temp_orange_png.c
    images/ui_img_images_temp_red_png.c
    images/ui_img_images_tvoc_green_png.c
    images/ui_img_images_tvoc_orange_png.c
    images/ui_img_images_tvoc_red_png.c
    images/ui_img_images_wifi1_png.c
    images/ui_img_images_wifi2_png.c
    fonts/ui_font_OpenSans_Regular_14.c
    fonts/ui_font_OpenSans_Regular_16.c
    fonts/ui_font_Poppins_ExtraLight_116.c
    fonts/ui_font_Poppins_Light_18.c
    fonts/ui_font_Poppins_Light_20.c
    fonts/ui_font_Poppins_Light_24.c)

add_library(ui ${SOURCES})
